Terraform_projects/Terraform_basics/manifest_3_contniue-with-all_utility/c3-securitygroups.tf
resource "aws_security_group" "basic-sg" {
  name        = "basic-sg"
  description = "Allow TLS inbound traffic and all outbound traffic"
  tags = {
    Name = "basic-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "basic-sg_ssh" {
  security_group_id = aws_security_group.basic-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "basic-sg_http" {
  security_group_id = aws_security_group.basic-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.basic-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
